# blaze-backend

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: deploy.yml
migrations/2025-08-27-061017_create_user/: up.sql
migrations/2025-08-28-121043_create_organization/: down.sql  up.sql
migrations/2025-08-28-123401_create_bucket/: down.sql  up.sql
migrations/2025-08-28-124530_create_folder/: up.sql
migrations/2025-08-28-125923_create_file/: up.sql
migrations/2025-09-03-182025_create_user_session/: down.sql  up.sql
migrations/2025-09-09-154341_add_bucket_visiblity/: down.sql  up.sql
migrations/2025-09-10-154938_create_organization_secrets/: down.sql  up.sql
migrations/2025-09-10-185941_create_unique_organization_name/: down.sql  up.sql
migrations/2025-09-13-110309_create_folders_from_path_fn/: up.sql
migrations/2025-09-14-092551_add_user_profile_image/: up.sql
migrations/2025-09-14-160001_create_check_folder_fn/: up.sql
src/: error.rs  main.rs  schema.rs
src/auth/: auth_dto.rs  auth_handler.rs  auth_middleware.rs  auth_model.rs  auth_service.rs  mod.rs
src/bucket/: bucket_dto.rs  bucket_handler.rs  bucket_model.rs  bucket_service.rs  mod.rs
src/config/: db_config.rs  mod.rs  redis_config.rs
src/file/: file_dto.rs  file_handler.rs  file_model.rs  file_service.rs  mod.rs
src/folder/: folder_dto.rs  folder_handler.rs  folder_model.rs  folder_service.rs  mod.rs
src/organization/: mod.rs  organization_dto.rs  organization_handler.rs  organization_model.rs  organization_service.rs
src/user/: mod.rs  user_dto.rs  user_handler.rs  user_model.rs  user_repository.rs  user_service.rs
src/util/: deserializer_util.rs  jwt_util.rs  mod.rs  validator_util.rs
